--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "material-database",
+  "name": "equalab-home",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "fuse.js": "^7.1.0",
-    "lucide": "^0.503.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
